# storage/api-docs/api-docs.json
@@ -32,12 +32,12 @@
                                     "email": {
                                         "type": "string",
                                         "format": "email",
-                                        "example": "user@example.com"
+                                        "example": "admin@gmail.com"
                                     },
                                     "password": {
                                         "type": "string",
                                         "format": "password",
-                                        "example": "password123"
+                                        "example": "admin123"
                                     }
                                 },
                                 "type": "object"
@@ -877,6 +877,7 @@
                             "schema": {
                                 "required": [
                                     "jours_blocage",
+                                    "date_blocage",
                                     "motif_blocage"
                                 ],
                                 "properties": {
@@ -886,6 +887,12 @@
                                         "maximum": 365,
                                         "minimum": 1,
                                         "example": 30
+                                    },
+                                    "date_blocage": {
+                                        "description": "Date de début du blocage",
+                                        "type": "string",
+                                        "format": "date",
+                                        "example": "2025-11-01"
                                     },
                                     "motif_blocage": {
                                         "description": "Motif du blocage",
@@ -1291,13 +1298,6 @@
         }
     },
     "components": {
-        "securitySchemes": {
-            "bearerAuth": {
-                "type": "http",
-                "scheme": "bearer",
-                "bearerFormat": "JWT"
-            }
-        },
         "schemas": {
             "User": {
                 "description": "Objet représentant un utilisateur",
@@ -1468,6 +1468,16 @@
                     }
                 },
                 "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "description": "Enter token in format (Bearer <token>)",
+                "name": "Authorization",
+                "in": "header",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
             }
         }
     },
